#12 add pagination for bikes