@@ -9,7 +9,6 @@ import servicecourse.repo.common.StringFilterSpecification;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class GroupsetEntitySpecification {
@@ -27,7 +26,7 @@ public class GroupsetEntitySpecification {
                         Optional.ofNullable(input.getIsElectronic())
                                 .map(GroupsetEntitySpecification::isElectronic))
                 .flatMap(Optional::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         return specifications.isEmpty() ? SpecificationUtils.matchAll()
                 : Specification.allOf(specifications);
